WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45301
Fix increases required alignment of target type warnings on ARM
https://bugs.webkit.org/show_bug.cgi?id=45301
Summary
Fix increases required alignment of target type warnings on ARM
Csaba Osztrogonác
Reported
2010-09-07 09:16:26 PDT
../../../WebCore/bindings/js/SerializedScriptValue.cpp:871: warning: cast from 'const uint8_t*' to 'const UChar*' increases required alignment of target type ../../../WebCore/bindings/js/SerializedScriptValue.cpp:783: warning: cast from 'const uint8_t*' to 'const uint32_t*' increases required alignment of target type ../../../WebCore/bindings/js/SerializedScriptValue.cpp:783: warning: cast from 'const uint8_t*' to 'const short unsigned int*' increases required alignment of target type ../../../WebCore/bindings/js/SerializedScriptValue.cpp:783: warning: cast from 'const uint8_t*' to 'const long long unsigned int*' increases required alignment of target type ../../../WebCore/plugins/PluginDatabase.cpp:510: warning: cast from 'char*' to 'time_t*' increases required alignment of target type SerializedScriptValue.cpp: --------------------------- static bool readString(const uint8_t*& ptr, const uint8_t* end, UString& str, unsigned length) { ... str = UString(reinterpret_cast<const UChar*>(ptr), length); // <-- line 871 ... } template <typename T> static bool readLittleEndian(const uint8_t*& ptr, const uint8_t* end, T& value) { ... value = *reinterpret_cast<const T*>(ptr); // <-- line 783 ... } PluginDatabase.cpp: -------------------- static bool readTime(time_t& resultTime, char*& start, const char* end) { ... resultTime = *reinterpret_cast<time_t*>(start); // <-- line 510 ... }
Attachments
Fix increases required alignment of target type warning on ARM
(2.52 KB, patch)
2010-09-08 02:19 PDT
,
Gabor Loki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2010-09-08 02:19:56 PDT
Created
attachment 66860
[details]
Fix increases required alignment of target type warning on ARM
Andreas Kling
Comment 2
2010-09-08 09:34:20 PDT
Comment on
attachment 66860
[details]
Fix increases required alignment of target type warning on ARM LGTM
WebKit Commit Bot
Comment 3
2010-09-08 15:44:01 PDT
Comment on
attachment 66860
[details]
Fix increases required alignment of target type warning on ARM Clearing flags on attachment: 66860 Committed
r67028
: <
http://trac.webkit.org/changeset/67028
>
WebKit Commit Bot
Comment 4
2010-09-08 15:44:05 PDT
All reviewed patches have been landed. Closing bug.
Yong Li
Comment 5
2010-10-13 08:51:01 PDT
Removing the warning doesn't fix the real problem: data in the buffer is not guaranteed to be aligned, so it can cause misaligned memory access on ARM (<v6).
Bug 47594
is created for this
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug