2010-09-08  Gabor Loki  <loki@webkit.org>

Reviewed by Andreas Kling.

        Fix increases required alignment of target type warning on ARM
        https://bugs.webkit.org/show_bug.cgi?id=45301

        No new tests needed.

        * bindings/js/SerializedScriptValue.cpp:
        (WebCore::CloneDeserializer::readLittleEndian):
        (WebCore::CloneDeserializer::readString):
        * plugins/PluginDatabase.cpp:
        (WebCore::readTime):

Canonical link: https://commits.webkit.org/57773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67028 268f45cc-cd09-0410-ab3c-d52691b4dbfc