WebCore/bindings/js/SerializedScriptValue.cpp
@@ -800,7 +800,7 @@ private:
         if (sizeof(T) == 1)
             value = *ptr++;
         else {
-            value = *reinterpret_cast<const T*>(ptr);
+            value = *reinterpret_cast_ptr<const T*>(ptr);
             ptr += sizeof(T);
         }
         return true;
@@ -888,7 +888,7 @@ private:
             return false;
 
 #if ASSUME_LITTLE_ENDIAN
-        str = UString(reinterpret_cast<const UChar*>(ptr), length);
+        str = UString(reinterpret_cast_ptr<const UChar*>(ptr), length);
         ptr += length * sizeof(UChar);
 #else
         Vector<UChar> buffer;
